dodano poprawki